<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dice_roll"
            android:icon="@drawable/dice_roller"
            android:title="@string/dice_roller" />

        <item
            android:id="@+id/nav_chars"
            android:icon="@drawable/charachter_menu_icon"
            android:title="@string/characters" />

        <item
            android:id="@+id/nav_add_char"
            android:icon="@drawable/add_char_menu"
            android:title="Add Character"/>

        <item
            android:id="@+id/nav_web_char_sheets"
            android:icon="@drawable/char_sheets_menu"
            android:title="Online Character Sheets"/>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/sign_out_arrow"
            android:title="@string/sign_out" />

    </group>

</menu>