<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    tools:context=".View.LoginActivity">

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:autofillHints="@string/e_mail"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoName" />

    <ImageView
        android:id="@+id/logoName"
        android:layout_width="342dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_name" />

    <EditText
        android:id="@+id/passLogin"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:autofillHints="@string/password"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLogin" />

    <Button
        android:id="@+id/buttonLoginGooglePlay"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/createNewAccount"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:text="@string/new_click_here_adventurer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginGooglePlay"
        app:layout_constraintVertical_bias="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>