<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background">

    <EditText
        android:id="@+id/passRegister"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/password"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/e_mail"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="380dp"
        android:layout_height="104dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/register_text_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_text_logo" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="55dp"
        android:autofillHints="Username"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLogo" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginBottom="128dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passRegister"
        app:layout_constraintVertical_bias="0.769" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>